--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>netty-study-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
     <!--统一管理jar包版本-->
     <properties>
         <utf8>UTF-8</utf8>
@@ -49,11 +48,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <version>1.7.25</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.google.protobuf</groupId>
